# yew-tube

./: .gitignore  Cargo.toml  deploy-to-gh-pages.sh  deploy.sh  index.html  tailwind.config.js  trunk-gh-pages.toml  trunk-release.toml  trunk.toml  yew_tube_converter_bg.wasm
docs/: index.html  package.json  yew-tube-converter-6b368aec8bd54543.js  yew-tube-converter-6b368aec8bd54543_bg.wasm  yew-tube-converter.js  yew-tube-converter_bg.wasm  yew_tube_converter-70b889308f35ec82.js  yew_tube_converter-812f55bb4267b558.js  yew_tube_converter-812f55bb4267b558_bg.wasm  yew_tube_converter-97439015d4df1ecc.js  yew_tube_converter-9e7b2e3ce7aa3e15.js  yew_tube_converter-9e7b2e3ce7aa3e15_bg.wasm  yew_tube_converter-bb755d123886a6ec.js  yew_tube_converter-bb755d123886a6ec_bg.wasm  yew_tube_converter.js  yew_tube_converter_bg.wasm  yew_tube_converter_lib.js  yew_tube_converter_lib_bg.wasm
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/atoms/: button.rs  main_title.rs  mod.rs  text_input.rs
src/components/molecules/: custom_form.rs  mod.rs
