[package]
name = "yew_tube_converter"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"

[dev-dependencies]
handlebars = "4.3.6"

[[bin]]
path = "src/main.rs"
name = "yew_tube_converter_bin"

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
lto = true