[package]
name = "yew_tube_converter"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
gloo = "0.8.0"
serde = "1.0.159"
serde_json = "1.0.95"
stylist = { version = "0.12.0", features = ["yew_integration"] }

[profile.dev]
incremental = true


[profile.release]
lto = true